test/libsolidity/syntaxTests/inlineAssembly/name_clash_function_var_subscope_reverse.sol
contract C {
    function f() public pure {
        assembly {
            { let g := 0 }
            function g() {}
        }
    }
}
// ----
// DeclarationError 1395: (77-87): Variable name g already taken in this scope.
